--- a/app/assets/styles/components/_planning.css
+++ b/app/assets/styles/components/_planning.css
@@ -2,6 +2,8 @@
 	&--image {
 		position: absolute;
 		top: 9%;
+		left: 50%;
+		transform: translateX(-50%);
 
 		img {
 			width: 23rem;
