--- a/app/assets/styles/components/_projects.css
+++ b/app/assets/styles/components/_projects.css
@@ -69,6 +69,10 @@
 						font-size: 1.7rem;
 						font-weight: 200;
 						color: rgba(0, 0, 0, .9);
+
+						@media only screen and (max-height: 500px) and (max-width: 1200px) {
+							display: none;
+						}
 					}
 
 					&--description {
@@ -78,6 +82,10 @@
 
 						@media only screen and (min-width: 650px) {
 							width: 80%;
+						}
+
+						@media only screen and (max-height: 500px) and (max-width: 1200px) {
+							display: none;
 						}
 					}
 
@@ -110,6 +118,10 @@
 						justify-items: center;
 						width: 100%;
 						margin: 5rem;
+
+						@media only screen and (max-height: 500px) and (max-width: 1200px) {
+							margin: 3rem;
+						}
 
 						span {
 							color: orange;
@@ -146,7 +158,7 @@
 			&--photos {
 				.project-photos {
 					width: 100%;
-					height: 40%;
+					height: 50%;
 					position: relative;
 					overflow: hidden;
 
@@ -159,7 +171,8 @@
 					}
 
 					@media only screen and (max-height: 500px) and (max-width: 1200px) {
-						height: 85%;
+						height: 65%;
+						width: 80%;
 					}
 
 					&__photo {
