--- a/app/assets/styles/layout/_header.css
+++ b/app/assets/styles/layout/_header.css
@@ -201,12 +201,13 @@
 				display: flex;
 				justify-content: center;
 				padding-top: 2rem;
-				padding-bottom: 5rem;
+				padding-bottom: 8rem;
 
 				@media only screen and (min-width: 650px) {
 					border-bottom: none;
 					display: block;
 					padding-bottom: 0;
+					padding-top: 0;
 				}
 			}
 		}
@@ -249,6 +250,10 @@
 		@media only screen and (min-width: 650px) {
 			height: 25%;
 			clip-path: polygon(0% 0%, 100% 70%, 100% 100%, 0% 100%);
+		}
+
+		@media only screen and (max-height: 500px) and (max-width: 2500px) {
+			background: white;
 		}
 	}
 
